--- a/general/templates/general/base.html
+++ b/general/templates/general/base.html
@@ -7,7 +7,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% trans 'National and Natural Parks Timesheets' %}</title>
+    <title>{% trans 'Administration of Bucegi Natural Park' %}</title>
 	<!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.0/css/bootstrap.min.css">
 	<!-- Font Awesome CSS -->
@@ -36,7 +36,21 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">{% trans 'National and Natural Parks Timesheets' %}</a>
+            <a class="navbar-brand" href="{% url 'home' %}">
+            <img src="{% static 'img/icons/romsilva_logo.png' %}" 
+                 alt="Bucegi Natural Park Logo" 
+                 width="50" 
+                 height="50" 
+                 class="d-inline-block align-top me-2">
+            <img src="{% static 'img/icons/bucegi_logo.png' %}" 
+                 alt="Bucegi Natural Park Logo" 
+                 width="50" 
+                 height="50" 
+                 class="d-inline-block align-top me-2">
+            {% trans 'Administration of Bucegi Natural Park' %}
+            </a>
+
+            <!-- <a class="navbar-brand" href="#">{% trans 'Timesheets Page of the Administration of Bucegi Natural Park' %}</a> -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -60,7 +74,7 @@
                             {% trans 'Reports' %}
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">{% trans 'Timesheet' %}</a></li>
+                            <li><a class="dropdown-item" href="{% url 'timesheet_list' %}">{% trans 'Timesheet' %}</a></li>
                             <li><a class="dropdown-item" href="#">{% trans 'Activity Report' %}</a></li>
                         </ul>
                     </li>
@@ -87,9 +101,14 @@
                             {% get_language_info_list for LANGUAGES as languages %}
                             {% for language in languages %}
                                 <li>
-                                    <a class="dropdown-item" href="/{{ language.code }}/{{ request.get_full_path |slice:'4:' }}">
-                                        {{ language.name_local }}
-                                    </a>
+                                    <form action="{% url 'set_language' %}" method="post" style="display:inline;">
+                                        {% csrf_token %}
+                                        <input name="next" type="hidden" value="{{ request.get_full_path }}">
+                                        <input name="language" type="hidden" value="{{ language.code }}">
+                                        <button type="submit" class="dropdown-item">
+                                            {{ language.name_local }}
+                                        </button>
+                                    </form>
                                 </li>
                             {% endfor %}
                         </ul>
@@ -121,7 +140,7 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2024 Regia Nationala a Padurilor - ROMSILVA. {% trans 'All rights reserved' %}.</p>
+            <p>&copy; 2024 RNP ROMSILVA - ADMINISTRAȚIA PARCULUI NATURAL BUCEGI. {% trans 'All rights reserved' %}.</p>
         </div>
     </footer>
 
@@ -130,8 +149,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- jQUERY import -->
-    <!-- Bootstrap JS -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <!-- JS code -->
 	<script src="{% static 'js/main.js' %}"></script>
     <!-- Evocalendar JS-->
