--- a/general/templates/general/base.html
+++ b/general/templates/general/base.html
@@ -56,7 +56,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'home' %}">{% trans 'Acasa' %}</a>
+                        <a class="nav-link" href="{% url 'home' %}">{% trans 'Home' %}</a>
                     </li>
                     {% if user.is_staff or user.is_superuser %}
                     <li class="nav-item">
