Added images to timesheets

--- a/general/templates/general/home.html
+++ b/general/templates/general/home.html
@@ -12,7 +12,7 @@
                     <i class="fas fa-calendar-check"></i>
                     <h3>{% trans 'Create Timesheet' %}</h3>
                     <p>{% trans 'Submit your monthly working hours' %}</p>
-                    <a href="#" class="btn btn-primary">{% trans 'Submit' %}</a>
+                    <a href="{% url 'timesheet_list' %}" class="btn btn-primary">{% trans 'Submit' %}</a>
                 </div>
             </div>
             <div class="col-md-6">
