--- a/general/templates/general/base.html
+++ b/general/templates/general/base.html
@@ -38,13 +38,13 @@
         <div class="container-fluid">
             <a class="navbar-brand" href="{% url 'home' %}">
             <img src="{% static 'img/icons/romsilva_logo.png' %}" 
-                 alt="Bucegi Natural Park Logo" 
+                 alt="RNP Romsilva Logo" 
                  width="50" 
                  height="50" 
                  class="d-inline-block align-top me-2">
             <img src="{% static 'img/icons/bucegi_logo.png' %}" 
                  alt="Bucegi Natural Park Logo" 
-                 width="50" 
+                 width="55" 
                  height="50" 
                  class="d-inline-block align-top me-2">
             </a>
@@ -73,8 +73,8 @@
                             {% trans 'Reports' %}
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="{% url 'timesheet_list' %}">{% trans 'Timesheet' %}</a></li>
-                            <li><a class="dropdown-item" href="#">{% trans 'Activity Report' %}</a></li>
+                            <!-- <li><a class="dropdown-item" href="{% url 'timesheet_list' %}">{% trans 'Timesheet' %}</a></li> -->
+                            <li><a class="dropdown-item" href="{% url 'generate_report' %}">{% trans 'Activity Report' %}</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
