--- a/dashboard/templates/dashboard/dashboard.html
+++ b/dashboard/templates/dashboard/dashboard.html
@@ -6,6 +6,14 @@
 {% block title %}{% trans "Admin Dashboard" %}{% endblock %}
 
 {% block content %}
+<!-- Header -->
+    <div class="header">
+        <div class="container">
+           <h1>{% trans 'Dashboard' %}</h1>
+           <p class="text-muted">{% trans 'Manage your team activity using the tools below' %}</p>
+            {% include 'includes/messages.html' %}
+        </div>
+    </div>
 <div class="container-fluid">
     <div class="row">
         <!-- Sidebar -->
