--- a/reports/templates/reports/report_results.html
+++ b/reports/templates/reports/report_results.html
@@ -1,7 +1,15 @@
-{% extends "base.html" %}
+{% extends "general/base.html" %}
 {% load i18n %}
 
 {% block content %}
+<!-- Header -->
+    <div class="header">
+        <div class="container">
+            <h2>{{ report_title }}</h2>
+            <p class="text-muted">{{ period_detail }} {{ start_date|date:"%Y" }}</p>
+            {% include 'includes/messages.html' %}
+        </div>
+    </div>
 <div class="container mt-4">
     <h2>
         {% if period == 'weekly' %}
