--- a/timesheet/templates/timesheet/timesheets_list.html
+++ b/timesheet/templates/timesheet/timesheets_list.html
@@ -5,6 +5,14 @@
 {% block title %}{% trans 'Timesheet List' %}{% endblock %}
 
 {% block content %}
+<!-- Header -->
+    <div class="header">
+        <div class="container">
+           <h1>{% trans 'New Timesheet' %}</h1>
+           <p class="text-muted">{% trans 'Create a new timesheet for a specific day using the calendar below' %}</p>
+            {% include 'includes/messages.html' %}
+        </div>
+    </div>
 <div class="timesheet-list container mt-4">
     
     <h1 class="mb-4">{% trans 'Timesheets calendar' %}</h1>
