--- a/users/templates/accounts/password_reset.html
+++ b/users/templates/accounts/password_reset.html
@@ -13,15 +13,15 @@
                         <!-- Password Change Form -->
                         <div class="mb-3">
                             <label for="old_password" class="form-label">{% trans 'Old Password' %}</label>
-                            {{ password_form.old_password }}
+                            {{ form.old_password }}
                         </div>
                         <div class="mb-3">
                             <label for="new_password1" class="form-label">{% trans 'New Password' %}</label>
-                            {{ password_form.new_password1 }}
+                            {{ form.new_password1 }}
                         </div>
                         <div class="mb-3">
                             <label for="new_password2" class="form-label">{% trans 'Confirm New Password' %}</label>
-                            {{ password_form.new_password2 }}
+                            {{ form.new_password2 }}
                         </div>
                         <!-- Submit Button -->
                         <div class="d-grid">
