--- a/users/templates/accounts/profile.html
+++ b/users/templates/accounts/profile.html
@@ -8,20 +8,20 @@
     <div class="row">
         <div class="col-md-4 mb-4">
             <div class="card">
-                {% if user_profile.avatar %}
-                <img src="{{ user_profile.avatar.url  }}" class="card-img-top" alt="Profile Image">
+                {% if profile_user.avatar %}
+                <img src="{{ profile_user.avatar.url  }}" class="card-img-top" alt="Profile Image">
                 {% else %}
                 <img src="{% static 'img/icons/user.svg' %}" class="card-img-top" alt="Default Profile Image">
                 {% endif %}
                 <div class="card-body">
                     <h5 class="card-title">{% trans 'User Information' %}</h5>
-                    <p class="card-text">{% trans 'Username' %}: {{ user.username }}</p>
-                    <p class="card-text">{% trans 'Email' %}: {{ user.email }}</p>
-                    <p class="card-text">{% trans 'Full Name' %}: {{ user.get_full_name }}</p>
-                    <p class="card-text">{% trans 'Short self description' %}: {{ user_profile.bio }}</p>
-                    <p class="card-text">{% trans 'Curriculum Vitae' %}: {{ user_profile.resume }}</p>
+                    <p class="card-text">{% trans 'Username' %}: {{ profile_user.username }}</p>
+                    <p class="card-text">{% trans 'Email' %}: {{ profile_user.email }}</p>
+                    <p class="card-text">{% trans 'Full Name' %}: {{ profile_user.get_full_name }}</p>
+                    <p class="card-text">{% trans 'Short self description' %}: {{ profile_user.bio }}</p>
+                    <p class="card-text">{% trans 'Curriculum Vitae' %}: {{ profile_user.resume }}</p>
                     <!-- Add more profile fields as needed -->
-                    <a href="{% url 'profile_edit' user.username %}" class="btn btn-primary">{% trans 'Edit Profile' %}</a>
+                    <a href="{% url 'users:profile_edit' pk=profile_user.pk %}" class="btn btn-primary">{% trans 'Edit Profile' %}</a>
                 </div>
             </div>
         </div>
