--- a/users/templates/accounts/profile_edit.html
+++ b/users/templates/accounts/profile_edit.html
@@ -24,13 +24,25 @@
                         </div>
                         <!-- Change user name -->
                         <div class="mb-3">
-                            <a href="{% url 'credentials_change' user.username %}" class="btn btn-primary form-control">{% trans 'Change Username or Email' %}</a>
+                            <a href="{% url 'users:credentials_change' pk=user.pk %}" class="btn btn-primary form-control">{% trans 'Change Username or Email' %}</a>
                         </div>
                         <!-- Change Password -->
                         <div class="mb-3">
                             <label for="password" class="form-label">{% trans 'Profile Password' %}</label>
                             <input type="email" id="email" class="form-control mb-3" value="***********" disabled>
-                            <a href="{% url 'password_change' %}" class="btn btn-primary form-control">{% trans 'Change Password' %}</a>
+                            <a href="{% url 'users:password_reset' %}" class="btn btn-primary form-control">{% trans 'Change Password' %}</a>
+                        </div>
+                        <!-- First name -->
+                        <div class="mb-3">
+                            <label for="first_name" class="form-label">{% trans 'First name' %}</label>
+                            {{ form.first_name }}
+                        </div>
+                        <!-- Surname -->
+                        <div class="mb-3">
+                            <div class="mb-3">
+                            <label for="last_name" class="form-label">{% trans 'Last name' %}</label>
+                            {{ form.last_name }}
+                        </div>
                         </div>
                         <!-- Photo upload -->
                         <div class="mb-3">
